--- a/EstudosNode/Express_Router_Controllers/package.json
+++ b/EstudosNode/Express_Router_Controllers/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express",
+  "name": "expressRouter",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.8",
     "express": "^4.18.2"
   },
   "devDependencies": {
